tests/compile_fail/self_import.olrn
@import (
    self = "self_import.olrn",
)

fn main() -> void
{
    @pl("should not compile")
}
